Fix sidebar z-index and main margin

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -26,3 +26,4 @@ $sidebar-height: calc(100vh - #{$navbar-height});
 $sidebar-width: 60px;
 $sidebar-extend-width: 240px;
 $main-width: calc(100vw - #{$sidebar-width});
+$main-extend-width: calc(100vw - #{$sidebar-extend-width});
